src/app/mail/mail-header/mail-header.component.scss
@import '../../../styles/base/variables';
@import '../../../styles/vendors/include-media/include-media';
@import '../../../styles/config/include-media-config';
@import '../../../styles/vendors/ceaser/ceaser-easing';

// == Mailbox navbar
.mailbox-navbar {
  position: relative;
  padding: 0.5rem 0.938rem;
  background-color: $brand-faded;
  border: 1px solid $dropdown-border-color;
  border-right: 0;
  border-left: 0;

  @include media("<=sm") {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: $zindex-default + 9;
    background: $brand-secondary;
    border: 0;

    .navbar-toggler {
      position: absolute;
      top: 50%;
      z-index: $zindex-default;
      padding: 0 0;
      height: 1.25rem;
      width: 1.25rem;
      transform: translateY(-50%);

      .navbar-toggler-icon {
        width: 1.25rem;
      }
    }

    .navbar-toggler-icon:nth-child(2), .navbar-toggler-icon:nth-child(3) {
      top: 9px;
    }

    .navbar-toggler-icon:nth-child(4) {
      top: 15px;
    }

    .mailbox-actions-menu .dropdown .dropdown-toggle {
      display: block;
      margin-top: -.05rem;
      padding: 0 1rem 0 0;
      background: transparent;
      border: 0;
      border-radius: 0;
      color: #a1abb5 !important;
      font-size: 0.875rem;
      height: auto;
      width: auto;

      &::before {
        right: 0;
        border-color: #a1abb5 !important;
      }
    }
  }

  @include media(">=ipad") {
    padding-right: 1.563rem;
    padding-left: 1.563rem;
  }

  .mailbox-navbar-col {
    @include media("<ipad", ">sm") {
      &:first-of-type {
        flex: 0 0 calc(100% - 265px);
        max-width: calc(100% - 265px);
      }

      &:last-of-type {
        flex: 0 0 265px;
        max-width: 265px;
      }
    }
  }
}

.header-fixed-spacer {
  @include media("<=sm") {
    margin-top: 52px;
  }
}

// == User actions icons
.mailbox-actions-menu {
  margin: 0 -0.5rem;
  padding: 0 0;
  list-style: none;

  @include media("<=sm") {
    margin: 0 -0.75rem;
  }

  > li {
    padding: 0 0.5rem;

    @include media("<=sm") {
      padding: 0 0.5rem;
      line-height: 1;
    }

    > a {
      display: block;
      text-align: center;

      @include media("<=sm") {
        color: #a1abb5 !important;
        font-size: 1rem;
        padding: .6rem 0.4rem;
      }

      @include media(">sm") {
        padding: 0.438rem 0.813rem;
        background: $brand-white;
        border: 1px solid $dropdown-border-color;
        color: $brand-light-gray;
        font-size: 1.25rem;

        &.active, &:active {
          background: #8b9095;
          border-color: #8b9095;
          color: #fafafa;
        }
      }
    }

    .dropdown {
      background: $brand-white;
      @include media("<=sm") {
        padding: .6rem 0.4rem;
        background: transparent;
      }
    }

    a {
      transition: unset;
    }

    a:hover,
    .dropdown-toggle:hover {
      background: $brand-faded;
      // TODO: add scss variables files in refactor
      color: #8a9095;
      border-color: #8a9095;
      border-right-color: #8a9095 !important;
    }

    a:active,
    .dropdown-toggle:active {
      color: $brand-white;
      // TODO: add scss variables files in refactor
      background: #8a9095;
      border-color: #8a9095;
    }

    .border-right-no-color {
      border-right-color: transparent;
    }

  }

  .dropdown-toggle {
    padding-top: 0.938rem;
    padding-bottom: 0.938rem;
    color: $brand-light-gray;
    font-size: 0.875rem;
    height: 3rem;
    width: 4.625rem;
    border-radius: 0;
  }

  .show.lang-dropdown .dropdown-toggle {
    color: $brand-secondary;

    &::before {
      margin-top: 0.1rem;
      border-color: $brand-secondary;
    }
  }

  .icon-earth-globe {
    display: inline-block;
    margin-right: 0.35rem;
    font-size: 1rem;
    vertical-align: top;
  }
}

.mailbox-lang.mailbox-dropdown {
  .dropdown-menu {
    min-width: 130px !important;
  }
}

// == Search form
.search-form {
  @include media("<ipad") {
    width: 90%;
  }

  .form-control {
    padding-right: 3.438rem + 0.938rem;
    height: 32px;
    @include media("<ipad", ">sm") {
      margin-top: -1px;
      padding: 0.875rem 3.438rem + 0.938rem 0.875rem 0.938rem;
    }
  }

  .search-btn {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    padding-right: 0.938rem;
    padding-left: 0.938rem;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    min-width: 55px;
  }

  .clear-btn {
    position: absolute;
    top: 5px;
    right: 58px;
    min-width: 40px;
    background: transparent;
    border: 0;
    cursor: pointer;

    i {
      font-size: 20px !important;

      &:hover {
        color: $brand-secondary;
      }

      &:active {
        color: $brand-black;
      }
    }
  }
}

// == Mobile search elements
.mailbox-xs-search-item {
  .dropdown-toggle {
    color: $brand-white;

    &::before {
      display: none;
    }
  }

  .show > .dropdown-toggle {
    opacity: 0;
  }

  .dropdown {
    position: static;
  }

  .dropdown-menu {
    position: absolute;
    top: -0.5rem !important;
    right: 0.938rem;
    left: 0.938rem !important;
    z-index: $zindex-default;
    min-width: inherit;
    background: transparent;
    box-shadow: none;
    border: 0;
    border-radius: 0;
    transform: none;
    transition: none;
  }

  .form-control {
    padding: 0.469rem 0.938rem + 2rem 0.469rem 0.938rem;
    border: 0;
    border-top-left-radius: 2px;
    border-bottom-left-radius: 2px;
  }

  .search-btn {
    padding: 0.5rem 0.625rem;
    border-color: #2c3e50;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
    min-width: 2rem;
    transition: none;
  }
}

.help-icon {
  a.dropdown-item {
    position: relative;
    padding: 0.625rem 0.938rem;
    border-bottom: 0;
    font-size: 0.875rem;
    line-height: 1.2;
    white-space: normal;
    width: 130px;
  }

  .icon-button {
    width: 56px;

    i {
      margin-top: -4px
    }
  }
}

.faq-dropdown {
  padding: .5rem 0;
}

.dropdown-menu {
  opacity: 0;
}

.show > .dropdown-menu {
  opacity: 1 !important;
}

.sri-check {
  color: green !important;
  background: transparent !important;
  border: 0 !important;
  margin-top: 10px;
  padding: 0 !important;

  i {
    font-size: 30px;
  }
}

